--- a/delivery.html
+++ b/delivery.html
@@ -96,7 +96,7 @@
                             	<form action="under_construction.html">
                             	<div class="row">                          		
                                 		<div class="col-md-7">                             	
-                                            <p class="instruction">Seleccione una nueva dirección de envío:</p>
+                                            <p class="instruction">Seleccione una dirección de envío:</p>
                                             <select class="select-address" name="address">
                                                 <option value="none">Seleccionar...</option>
                                                 <option value="address1">Madero 524, Capital Federal</option>
