--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                             <div>
                                 <textarea name="message" cols="60" rows="6"></textarea>
                             </div>
-                            <button type="submit" name="send-contact-form" class="btn btn-default action-button send-button">
+                            <button type="submit" name="send-contact-form" class="btn btn-default action-button btn-info send-button">
 									<span class="glyphicon glyphicon-send"></span> Enviar
 								</button>
                             <div class="obligatory">* Campos obligatorios</div>
@@ -128,7 +128,6 @@
             <footer class="row">
                 <div id="tools" class="col-md-2"> 
                     <a href="contact.html" >Contacto</a>
-                    <br /><a href="under_construction.html">Política de privacidad</a>
                 </div>
                 <div id="suscribe" class="col-md-10">
                     <div id="suscribe_text" class="row">
