--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <form id="searchcols" class="navbar-form navbar-left" role="search" action="search.html">
                         <div class="form-group">
-                            <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto..." name="product">
+                            <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto...">
                         </div>
                         <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
                         <br>
@@ -129,20 +129,8 @@
 				    
 				</ul>
 			</div>
-			<div class="btn-group">
-				<a href="search.html?cat=novedades">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-					NOVEDADES
-				</button>
-				</a>
-			</div>
-			<div class="btn-group">
-				<a href="search.html?cat=promociones">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-					PROMOCIONES
-				</button>
-				</a>
-			</div>
+			<div id="novedades" class="btn-group"></div>
+			<div id="promociones" class="btn-group"></div>
                 </div>
 
 
