--- a/payment.html
+++ b/payment.html
@@ -28,7 +28,7 @@
                 <div class="col-md-6">
                     <form id="searchcols" class="navbar-form navbar-left" role="search" action="search.html">
                         <div class="form-group">
-                            <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto..." name="product">
+                            <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto...">
                         </div>
                         <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
                         <br>
