--- a/under_construction.html
+++ b/under_construction.html
@@ -25,9 +25,16 @@
                 <div class="col-md-6">
                     <form id="searchcols" class="navbar-form navbar-left" role="search" action="search.html">
                         <div class="form-group">
-                            <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto..." name="product">
+                            <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto...">
                         </div>
-                        <button type="submit" class="btn btn-default">Buscar</button>
+                        <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
+                        <br>
+                        <div id="search-genders">
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino"> Hombre</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino"> Mujer</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Ninios"> Niños</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Ninias"> Niñas</input></div>
+                        </div>
                     </form>
                 </div>
                
