--- a/gestion_pedidos.html
+++ b/gestion_pedidos.html
@@ -35,10 +35,10 @@
                         <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
                         <br>
                         <div id="search-genders">
-                            <div class="input-div"><input type="radio" name="gender" value="Masculino"> Hombre</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Femenino"> Mujer</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninios"> Niños</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninias"> Niñas</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Adulto"> Hombre</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Adulto"> Mujer</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Bebe"> Niños</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Bebe"> Niñas</input></div>
                         </div>
                     </form>
                 </div>
