--- a/search.html
+++ b/search.html
@@ -9,6 +9,7 @@
         <link rel="shortcut icon" href="images/fav.ico" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="js/account-management.js" type="text/javascript"></script>
+	<script src="js/javascript.js"></script>
 	<script src="js/navBar.js" type="text/javascript"></script>
 	<script src="js/search.js"  type="text/javascript"></script>
         <script src="js/bootstrap.js"></script>
@@ -36,10 +37,10 @@
                         <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
                         <br>
                         <div id="search-genders">
-                            <div class="input-div"><input type="radio" name="gender" value="Masculino"> Hombre</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Femenino"> Mujer</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninios"> Niños</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninias"> Niñas</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Adulto"> Hombre</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Adulto"> Mujer</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Bebe"> Niños</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Bebe"> Niñas</input></div>
                         </div>
                     </form>
                 </div>
