--- a/confirm.html
+++ b/confirm.html
@@ -27,17 +27,17 @@
                 <div class="col-md-1"></div>
                 
                 <div class="col-md-6">
-                    <form id="searchcols" class="navbar-form navbar-left" role="search" action="search.html">
+                   <form id="searchcols" class="navbar-form navbar-left" role="search" action="search.html">
                         <div class="form-group">
                             <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto...">
                         </div>
                         <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
                         <br>
                         <div id="search-genders">
-                            <div class="input-div"><input type="radio" name="gender" value="Masculino"> Hombre</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Femenino"> Mujer</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninios"> Niños</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninias"> Niñas</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Adulto"> Hombre</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Adulto"> Mujer</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Bebe"> Niños</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Bebe"> Niñas</input></div>
                         </div>
                     </form>
                 </div>
