--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
         <link href="css/contact.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
+	<script src="js/javascript.js"></script>
         <script src="js/bootstrap.js"></script>
         <script src="js/maps.js"></script>
     </head>
@@ -35,10 +36,10 @@
                         <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
                         <br>
                         <div id="search-genders">
-                            <div class="input-div"><input type="radio" name="gender" value="Masculino"> Hombre</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Femenino"> Mujer</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninios"> Niños</input></div>
-                            <div class="input-div"><input type="radio" name="gender" value="Ninias"> Niñas</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Adulto"> Hombre</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Adulto"> Mujer</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Bebe"> Niños</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Bebe"> Niñas</input></div>
                         </div>
                     </form>
                 </div>
