--- a/delivery.html
+++ b/delivery.html
@@ -9,6 +9,7 @@
         <link href="css/delivery.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/bootstrap.js"></script>
+	<script src="js/javascript.js"></script>
         <script src="js/delivery.js"></script>
     </head>
 
@@ -232,12 +233,19 @@
                         ¡Suscribite a nuestras promociones!
                     </div>
                     <div class="row">
-                        <form class="navbar-form navbar-left" role="search" action="under_construction.html">
-                            <div class="form-group">
-                                <input type="text" id="suscribebar" class="form-control" placeholder="Ingresa tu e-mail..." name="suscribe">
-                            </div>
-                            <button type="submit" class="btn btn-default">Enviar</button>
-                        </form>
+                        <form id="searchcols" class="navbar-form navbar-left" role="search" action="search.html">
+                        <div class="form-group">
+                            <input type="text" id="searchbar" class="form-control" placeholder="Buscar producto...">
+                        </div>
+                        <button id="search-btn" type="submit" class="btn btn-default">Buscar</button>
+                        <br>
+                        <div id="search-genders">
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Adulto"> Hombre</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Adulto"> Mujer</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Masculino&edad=Bebe"> Niños</input></div>
+                            <div class="input-div"><input type="radio" name="gender" value="Femenino&edad=Bebe"> Niñas</input></div>
+                        </div>
+                    </form>
                     </div>
                </div>   
             </footer>
