--- a/delivery.html
+++ b/delivery.html
@@ -58,7 +58,7 @@
                         <div class="col-md-3" id="cart-btn">
                             <div class="row">
                                 <span id="cart-image" class="glyphicon glyphicon-shopping-cart"></span>
-                                <span class="badge">0</span>
+                                <span class="badge"></span>
                             </div>
                             <div class="row icontext">Carrito de compras</div>
                         </div>
