--- a/index.html
+++ b/index.html
@@ -78,7 +78,15 @@
             <!-- ACÁ EMPIEZA EL CONTENIDO -->
 
             <div id="site-content">
-
+				
+                <noscript>
+                <div id="noscript-popup">
+                	<div class="popup-text">
+                    <img src="images/alert.png" width="30" height="30" alt="Alerta" /> La página que estás viendo requiere para su funcionamiento el uso de JavaScript. 
+Si lo has deshabilitado intencionadamente, por favor vuelve a activarlo.
+                    </div>
+                </div>
+                </noscript>
                 <div class="row">
                     <div class="col-md-1"></div>
                     <div class="col-md-10">
