--- a/wish_list.html
+++ b/wish_list.html
@@ -94,8 +94,8 @@
                             <div class="col-md-1"></div>
                             <div class="col-md-1"></div>
                             <a href="index.html">
-                            <div class="col-md-2 btn btn-default btn-info action-button">SEGUIR BUSCANDO</div>
-                        </a>
+                            <div id="keepLooking" class="col-md-2 btn btn-default btn-info action-button">SEGUIR BUSCANDO</div>
+			    </a>
                             <div class="col-md-1"></div>
                         </div>
                           <!-- Table -->
