cambios de confirm

--- a/payment.html
+++ b/payment.html
@@ -187,7 +187,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td>*Nombres del titular</td>
+                                                <td>*Nombre del titular</td>
                                             </tr>
                                             <tr>
                                                 <td>
@@ -195,7 +195,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td>*Apellidos del titular</td>
+                                                <td>*Apellido del titular</td>
                                             </tr>
                                             <tr>
                                                 <td>
