--- a/account.html
+++ b/account.html
@@ -117,16 +117,16 @@
 														<div>
 															<form id="form2-card">
 																Contraseña actual
-																<input class="fieldPwd" name="actualPwd" type="text" id="actualPwd"><br><br>
+																<input class="fieldPwd" name="actualPwd" type="password" id="actualPwd"><br><br>
 																Nueva contraseña
-																<input class="fieldPwd" name="newPwd" type="text" id="newPwd"><br><br>
+																<input class="fieldPwd" name="newPwd" type="password" id="newPwd"><br><br>
 																Repetir Contraseña
-																<input class="fieldPwd" name="confirmPwd" type="text" id="confirmPwd"><br><br>
+																<input class="fieldPwd" name="confirmPwd" type="password" id="confirmPwd"><br><br>
 															</form>
 														</div>
 													</div>
 												</div>
-												<div class="row">
+												<div class="row" id="cambiar-password">
 														<button id="changePwd" type="button" class="btn btn-default btn-info action-button">
 															<span class="glyphicon glyphicon-ok"></span> Cambiar contraseña
 														</button>
